adding this thing

--- a/views/modifications.html.slim
+++ b/views/modifications.html.slim
@@ -1,5 +1,5 @@
 h1 Modificando o código
-h2 Entre na pasta do clone do repositório e deixe uma mensagem aqui:
+h2 Entre na pasta do clone do repositório e deixe uma mensagem aqui: Mensagem bacana para o mundo!
 p
   |Mensagem bacana para o mundo!
 p
